# archie-gateway-guardian-tab5-public

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHA256SUMS
.github/: PULL_REQUEST_TEMPLATE.md
docs/: GATEWAY_API.md  HARDWARE.md  M5STACK_DEVELOPER_RESOURCES.md  ONBOARDING_RESEARCH.md  QUICKSTART.md  THEME_GUIDE.md  WALKTHROUGH.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_config.hpp  app_main.cpp  archie_pointcloud.cpp  archie_pointcloud.hpp  direct_ai_client.cpp  direct_ai_client.hpp  elevenlabs_voice.cpp  elevenlabs_voice.hpp  hermes_console_screen.cpp  hermes_console_screen.hpp  hermes_mode.cpp  hermes_mode.hpp  hermes_theme.cpp  hermes_theme.hpp  idf_component.yml  improv_serial.cpp  improv_serial.hpp  keyboard_status.cpp  keyboard_status.hpp  profile_import.cpp  profile_import.hpp  profile_store.cpp  profile_store.hpp  settings_screen.cpp  settings_screen.hpp  setup_wizard.cpp  setup_wizard.hpp  splash_screen.cpp  splash_screen.hpp  tab5_keyboard.cpp  tab5_keyboard.hpp  telemetry_model.cpp  telemetry_model.hpp  wifi_manager.cpp  wifi_manager.hpp  ws_hermes_client.cpp  ws_hermes_client.hpp
firmware/main/assets/: archie_pointcloud_data.hpp
firmware/main/fonts/: hack_mono_18.c
gateway/: docker-compose.yml  quickstart.sh  smoke_test.py
profiles/: archie_hermes.example.conf
scripts/: check_secrets.sh  png_to_lvgl.py  prepare_web_installer.sh
tools/: generate_archie_pointcloud.py  generate_archie_pointcloud_from_glb.mjs  package-lock.json  package.json
web/: index.html  (+1 more)
(+15 files in other folders)
